--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
 
 <body>
+  <header>
   <h1>JACK TURNER</h1>
+    </header>
   <p>Welcome to my website!</p>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
 </body>
