--- a/index.html
+++ b/index.html
@@ -1,11 +1,128 @@
 <html>
+  <head>
+    <title>Tiggy Business Page</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap"
+      rel="stylesheet"
+    />
+    <link href="styles.css" rel="stylesheet" />
+  </head>
+  <body>
+    <div id="header">
+      <nav class="container">
+        <ul>
+          <a href="product"><li>Products</li></a>
+          <a><li>Employees</li></a>
+          <a><li>Contact-Details</li></a>
+        </ul>
+      </nav>
+    </div>
 
-<body>
-  <header>
-  <h1>JACK TURNER</h1>
-    </header>
-  <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
-</body>
+    <div class="logo">
+      <img class="lg" src="logo-design.jpg" />
+    </div>
 
+    <div class="statement">
+      <div class="test"></div>
+      <p class="container">
+        Here at 'Tiggy's Video Editing Hire' we aspire to accomate all our
+        customers to our full capabilities. We offer 24/7 support with all our
+        employees. We help upcoming creators for any platforms who need help
+        editing videos with high-quality edited videos. We guarantee support and
+        high-quality across the whole company.
+      </p>
+    </div>
+    <div class="product">
+      <div class="container">
+        <h2>Thumbnails</h2>
+        <figure class="products-photos">
+          <img class="thumbnail" src="thumbnail.webp" />
+        </figure>
+        <p>
+          Our service delivers professionally designed thumbnails that grab
+          attention and boost viewer engagement. Customized to align seamlessly
+          with your brand, each thumbnail is crafted to maximize click-through
+          rates and viewer retention. Fast turnaround times and competitive
+          pricing ensure you get quality thumbnails promptly, empowering you to
+          publish compelling videos consistently.
+        </p>
+        <h2>Video Editing</h2>
+        <figure class="products-photos">
+          <img class="vd" src="video-editing.avif" />
+        </figure>
+        <p>
+          Transform your videos with our professional Editing Service. Our
+          skilled editors enhance your footage, ensuring seamless transitions,
+          crisp visuals, and captivating storytelling. Whether you need basic
+          cuts or intricate effects, we tailor each edit to match your style and
+          message. With fast turnaround times and competitive pricing, we
+          empower you to deliver polished videos that captivate audiences and
+          elevate your content to the next level.
+        </p>
+        <h2>Advertisement</h2>
+        <figure class="products-photos">
+          <img class="ad" src="ad.jpg" />
+        </figure>
+        <p>
+          Drive visibility and engagement with our Advertising Video Production
+          service. Our expert team specializes in creating impactful videos that
+          resonate with your audience and amplify your brand message. From
+          concept to completion, we ensure every detail—from compelling visuals
+          to persuasive messaging—is meticulously crafted to achieve your
+          marketing goals. With a focus on quality, creativity, and timely
+          delivery, we empower your business to stand out in the competitive
+          digital landscape.
+        </p>
+      </div>
+    </div>
+
+    <div class="employees">
+      <h2>Employees</h2>
+      <figure class="head-shot">
+        <img src="seamus-photo.JPG" />
+      </figure>
+      <figcaption>
+        Meet our Thumbnail Specialist at 'Tiggy's Video Editing Hire', dedicated
+        to enhancing your video content's appeal and engagement. With a keen eye
+        for design and a deep understanding of viewer psychology, they craft
+        compelling thumbnails that drive clicks and views. Each thumbnail is
+        meticulously tailored to align with your brand's identity, ensuring
+        consistency and visual impact. With a commitment to creativity and
+        efficiency, our Thumbnail Specialist empowers your videos to captivate
+        audiences and stand out in the digital realm
+      </figcaption>
+      <figure class="head-shot">
+        <img src="brooke1.JPG" />
+      </figure>
+      <figcaption>
+        Introducing our Video Editing Expert at 'Tiggy's Video Editing Hire', a
+        creative powerhouse dedicated to transforming raw footage into
+        captivating visual stories. With a keen sense of narrative flow and
+        technical expertise, they meticulously edit videos to perfection.
+        Whether it's refining cuts, enhancing audio, or adding special effects,
+        our Video Editing Expert ensures every frame aligns with your vision.
+        With a commitment to quality and innovation, they elevate your content
+        to engage and inspire your audience, making your videos stand out in the
+        digital landscape.
+      </figcaption>
+      <figure class="head-shot">
+        <img src="jack-.JPG" />
+      </figure>
+      <figcaption>
+        Meet our Video Advertising Strategist at 'Tiggy's Video Editing Hire, a
+        visionary professional specializing in maximizing the impact of your
+        video content. With a strategic blend of creativity and market insight,
+        they craft compelling campaigns that resonate with your target audience.
+        From concept ideation to final execution, our strategist ensures each
+        video aligns with your brand's message and marketing objectives. With a
+        proven track record in driving engagement and conversions, they empower
+        your business to thrive in the competitive digital landscape
+      </figcaption>
+    </div>
+
+    <footer>
+
+    </footer>
+  </body>
 </html>
